# ai-news-api-gateway

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: celery_app.py  config.py  database.py  dependencies.py  main.py
app/routers/: articles.py  health.py  pipeline.py  topics.py
app/ws/: pipeline.py
