[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-news-api-gateway"
version = "0.1.0"
description = "FastAPI gateway that exposes REST and WebSocket endpoints for the ai-news-platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "celery[redis]>=5.3",
    "python-slugify>=8.0",
    # db-service installed as local package (copied to /db-service in Docker)
    "ai-news-db @ file:///db-service",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
